- 29/08/2023
68. Makefile, indimail-mta.spec, PLUGINS: removed example plugin
69. debian/rules: added -fno-lto flag
70. tests/test-indimail-mta: added test for qmail-remote to do STARTTLS and
    SMTPS
- 05/09/2023
71. qregex.h, matchregex.[c.h]: moved matchregex.c, matchregex.h to libqmail
72. dk-filter.sh: Added missing NODKIMKEY feature to turn off dkimkeyfn

* Sun Apr 23 2023 17:51:54 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.3-1.1%{?dist}
Release 3.0.3-1.1 Start 01/02/2023 End 23/04/2023
======= Release Highlights ================================================
o ability to set environment variables usig dkimkeys and facilitate
  multi-signature generation (RSA/ED25519)
o Many new mrtg graphs added
===========================================================================
- 01/02/2023
01. qmail-dkim.c, getDomainToken.c: use dkimkeys to set env variables. Can be
    used to facilitate rsa/ed25519 multi-signature generation
02. qmail-dkim.c: use DKIMSignReplaceHash() to change signature encryption
    method
- 04/02/2023
03. dk-filter.sh: refactored for multi-signature generation
- 05/02/2023
04. dknewkey.sh: made key type case insensitive
05. dknewkey.sh: removed newlines from public key records
06. dknewkey.sh: added -e, --enforce option to disable testing mode for dkim
    key
- 07/02/2023
07. qmail-qread.c: BUG: Fixed SIGSEGV
08. qmail-qread.c: skip dynamic queue if DYNAMIC_QUEUE is not set
- 08/02/2023
09. qmail-qread.c: auto determine dynamic queue using /dev/shm/qscheduler
10. qscheduler.c: merged sigterm, die() functions
11. getqueue.c: include stdint.h for uint32_t definition
12. qmail-smtpd.c, qmail-qread.c, nowutc.c: fixed format string for subprintf
13. hasstdarg.h: fixed HAVE_STDARG_H define
14. qmail.h: added perm_error, temp_error macro to evaluate perm/temp errors
15. qmail.c: use perm_error/temp_error from qmail.h to evaluate perm/temp
    error
- 11/02/2023