@@ -1,3 +1,4 @@
+.\" vim: tw=75
 .TH qmail-queue 8
 
 .SH NAME
