@@ -1,6 +1,8 @@
-#!/bin/sh
 #
 # $Log: surblqueue.sh,v $
+# Revision 1.7  2023-09-07 19:58:19+05:30  Cprogrammer
+# Redirect debug messages from surbfilter to SURBL_DEBUG_FN if set
+#
 # Revision 1.6  2017-04-16 13:08:01+05:30  Cprogrammer
 # fixed qmail-multi path
 #
@@ -20,7 +22,7 @@
 # Initial revision
 #
 #
-# $Id: surblqueue.sh,v 1.6 2017-04-16 13:08:01+05:30 Cprogrammer Exp mbhangui $
+# $Id: surblqueue.sh,v 1.7 2023-09-07 19:58:19+05:30 Cprogrammer Exp mbhangui $
 #
 # I should be called by qmail-smtpd or anything that calls qmail-queue
 #
@@ -39,13 +41,22 @@ fi
 #
 # run surblfilter and feed output to qmail-multi
 #
-PREFIX/sbin/surblfilter > $out
+if [ -n "$ERROR_FD" ] ; then
+	if [ "$ERROR_FD" != "2" ] ; then
+		exec 2>&$ERROR_FD
+	fi
+fi
+if [ -n "$SURBL_DEBUG_FN" ] ; then
+	PREFIX/sbin/surblfilter $SURBLOPTS > $out 5>>$SURBL_DEBUG_FN
+else
+	PREFIX/sbin/surblfilter $SURBLOPTS > $out 5>/dev/null
+fi
 status=$?
 if [ $status -eq 0 ] ; then
 	exec 0<$out
 	/bin/rm -f $out
 	# use SURBLQUEUE to execute queue program (thanks Roberto Puzzanghera)
-	if [ "$SURBLQUEUE" != "" -a -x "$SURBLQUEUE" ]; then
+	if [ -n "$SURBLQUEUE" -a -x "$SURBLQUEUE" ]; then
 		exec $SURBLQUEUE
 	else
 		exec PREFIX/sbin/qmail-multi
